@startuml
interface Expense {
  + getName(): String
  + getAmount(): Double
}

class Ausgaben implements Expense {
  - name: String
  - amount: Double
  + Ausgaben(name: String, amount: Double)
  + getName(): String
  + getAmount(): Double
}

interface ExpenseManagement {
  + addExpense(expense: Expense)
  + getExpenses(): List<Expense>
}

class AusgabenVerwaltung implements ExpenseManagement {
  - expenses: List<Expense>
  + AusgabenVerwaltung()
  + addExpense(expense: Expense)
  + getExpenses(): List<Expense>
}

interface ExpenseCalculator {
  + calculateDebts(expenses: List<Expense>): List<String>
}

class AusgabenRechner implements ExpenseCalculator {
  + calculateDebts(expenses: List<Expense>): List<String>
}

interface CSVReader {
  + readExpenses(filePath: String): List<Expense>
}

class CSVReaderImpl implements CSVReader {
  + readExpenses(filePath: String): List<Expense>
  - parseExpenseFromCSV(line: String): Expense
}

class Main {
  - expenseManagement: ExpenseManagement
  - expenseCalculator: ExpenseCalculator
  - csvReader: CSVReader
  + main(args: String[])
}

Main --> ExpenseManagement
Main --> ExpenseCalculator
Main --> CSVReader
Main "1" --> "*" Expense
CSVReader --> "*" Expense
ExpenseManagement --> "*" Expense
ExpenseCalculator --> "*" Expense

@enduml
